@@ -368,6 +368,26 @@ class Cache(object):
         """
         return apt_pkg.ActionGroup(self._depcache)
 
+    @property
+    def broken_count(self):
+        """Return the number of packages with broken dependencies."""
+        return self._depcache.broken_count
+
+    @property
+    def delete_count(self):
+        """Return the number of packages marked for deletion."""
+        return self._depcache.del_count
+
+    @property
+    def install_count(self):
+        """Return the number of packages marked for installation."""
+        return self._depcache.inst_count
+
+    @property
+    def keep_count(self):
+        """Return the number of packages marked as keep."""
+        return self._depcache.keep_count
+
     if apt_pkg._COMPAT_0_7:
         _runCallbacks = function_deprecated_by(_run_callbacks)
         getChanges = function_deprecated_by(get_changes)
